public: Adjust SearchBar padding to prevent text overflow

--- a/public/styles/components/SearchBar.scss
+++ b/public/styles/components/SearchBar.scss
@@ -33,7 +33,7 @@ $max-width: 25rem;
 	color: var(--foreground);
 	font-size: 0.875rem;
 	border-radius: $radius;
-	padding: 0.75rem 1rem;
+	padding: 0.75rem 36px 0.75rem 1rem;
 	border: 1px solid var(--background);
 	box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.12);
 	transition: var(--d-m-2) var(--e-s);
@@ -49,7 +49,7 @@ $max-width: 25rem;
 	nav & {
 		height: $height-sm;
 		font-size: 0.875rem;
-		padding: 0.65rem 0.75rem;
+		padding: 0.65rem 36px 0.65rem 0.75rem;
 	}
 
 	&::placeholder {
